Update README and ini stub

--- a/ini/default.ini
+++ b/ini/default.ini
@@ -25,7 +25,9 @@ novobarcode_index_file=
 ref_seq_file=
 ## locations of all methylation sites with reference to FASTA file above
 meth_site_file=
-
+## FASTA formatted file containing genomic sequence for constructs
+## note names must match meth_site_file gene names and ref_seq_file names exactly
+genomic_fa_file=
 
 
 [PROJECT settings]
