Added new parameters and comments on how and why to use.

--- a/ini/default.ini
+++ b/ini/default.ini
@@ -38,6 +38,10 @@ mac_d_conf_file=
 ## This is the queue engine to use. Currently only SGE is supported see macd https://github.com/ollyburren/macd
 ## for further information.
 queue_engine=SGE
+## Read strand. Orientation of strands with respect to reference sequence.
+## In general this will be + but if you are doing reverse orientation barcode tagging then
+## after demultiplexing reverse barcode this will need to be set to -
+read_strand=+
 ## Phred quality cut off (DEFAULT +33: "Phred+33" encoding).
 phred=
 ## Minimum overlap length between the read and the linker in 
@@ -54,7 +58,8 @@ maxol=
 ## Maximum overlap length expected in approximately 90% of 
 ## read pairs in stitching. (default:222)
 minol=
-##
+## Note that if using a reverse barcode strategy then novobarcode trims the barcode. As we use 
+## the combination of linker and barcode this should be set to -1 so that no HEADCROP occurs.
 linker_length=18
 forseq=GGTCATAGCTGTTTCCTG
 revseq=ACTGGCCGTCGTTTTACA
